include/spark/scripting/SparkInterop.h

/* --- Opaque handles --- */
typedef struct SparkEngineContext SparkEngineContext;
typedef struct SparkGameWorld SparkGameWorld;
typedef struct SparkGameObject SparkGameObject;
typedef struct SparkGameComponent SparkGameComponent;
typedef struct SparkInput SparkInput;
typedef enum SparkComponentKind {
    SparkComponentKind_Unknown = 0,
    SparkComponentKind_Transform,
    SparkComponentKind_Mesh,
    SparkComponentKind_Collision,
    SparkComponentKind_Material,
    SparkComponentKind_PointLight,
    SparkComponentKind_SkinnedMesh,
    SparkComponentKind_Animator,
    SparkComponentKind_TextOverlay,
    SparkComponentKind_GuiCanvas,
    SparkComponentKind_Sky,
    SparkComponentKind_ParticleEmitter,
    SparkComponentKind_Terrain,
    SparkComponentKind_Sprite,
    SparkComponentKind_Tilemap,
    SparkComponentKind_BoxCollider2D,
    SparkComponentKind_Rigidbody2D,
    SparkComponentKind_SpriteAnimator,
    SparkComponentKind_CircleCollider2D,
    SparkComponentKind_SpriteLighting2D,
    SparkComponentKind_BoxCollider3D,
    SparkComponentKind_SphereCollider3D,
    SparkComponentKind_Rigidbody3D,
    SparkComponentKind_PhysicsMaterial3D,
    SparkComponentKind_DistanceJoint3D,
    SparkComponentKind_SceneSpatialPolicy,
    SparkComponentKind_AiAgent,
    SparkComponentKind_SoundCue,
    SparkComponentKind_Sprite2DCharacterAnimFsm,
    SparkComponentKind_Character3DAnimFsm,
    SparkComponentKind_SpotLight,
    SparkComponentKind_DirectionalLight,
    SparkComponentKind_Camera,
    SparkComponentKind_Camera2D,
    SparkComponentKind_Camera2DRig,
    SparkComponentKind_BlendMode,
    SparkComponentKind_RenderLayer,
    SparkComponentKind_SortingGroup,
} SparkComponentKind;
SPARK_SCRIPT_API int spark_world_load_texture(SparkGameWorld* world, const char* path);
SPARK_SCRIPT_API int spark_world_register_checkerboard_texture(
        SparkGameWorld* world,
        const char* cacheKey,
        uint32_t size,
        uint32_t tilePixels,
        const SparkVector3* colorA,
        const SparkVector3* colorB);
/** Registers Kenney platformer tilesheet + player atlas (procedural fallbacks when PNGs are missing). */
SPARK_SCRIPT_API int spark_world_register_platformer2d_demo_textures(
        SparkGameWorld* world,
        SparkPlatformer2DAssetsInfo* outInfo);
/** Loads Roboto UI fonts from build tree / assets/fonts (required for TextOverlay HUD). */
SPARK_SCRIPT_API int spark_world_mount_platformer_ui_font(SparkGameWorld* world);
/** UV rect for Kenney simplified platformer tilesheet tile number (1-based pack index). */
SPARK_SCRIPT_API void spark_platformer2d_kenney_tile_uv(uint32_t tileOneBased, SparkVector4* outUvRect);
/* --- Scene submit (mirrors SceneSubmit.hpp) --- */
SPARK_SCRIPT_API void spark_scene_fill_standard_lit_from_world(
        SparkGameWorld* world,
        SparkEngineContext* context,
        const SparkMatrix4* viewProjection,
        const SparkVector3* cameraPositionWorld,
        const SparkVector3* lightDirectionWorld,
        const SparkVector3* lightColor,
        float lightIntensity,
        const SparkVector3* ambientColor,
        int enableParticles,
        const SparkVector3* particleCameraRight,
        const SparkVector3* particleCameraUp,
        float sceneTimeSeconds,
        void* outParams,
        uint32_t outParamsByteSize,
        SparkSpriteSortMode spriteSortMode);
SPARK_SCRIPT_API void spark_scene_submit_standard_lit_from_world(
        SparkGameWorld* world,
        SparkEngineContext* context,
        const SparkMatrix4* viewProjection,
        const SparkVector3* cameraPositionWorld,
        const SparkVector3* lightDirectionWorld,
        const SparkVector3* lightColor,
        float lightIntensity,
        const SparkVector3* ambientColor,
        int enableParticles,
        const SparkVector3* particleCameraRight,
        const SparkVector3* particleCameraUp,
        float sceneTimeSeconds,
        SparkSpriteSortMode spriteSortMode);
/* --- GUI (mirrors GuiScene.hpp) --- */
SPARK_SCRIPT_API void spark_gui_process_canvases_input(
        SparkGameWorld* world,
        SparkInput* input,
        int framebufferWidth,
        int framebufferHeight);
SPARK_SCRIPT_API void spark_gui_paint_canvases(
        SparkGameWorld* world,
        void* params,
        uint32_t paramsByteSize,
        int framebufferWidth,
        int framebufferHeight);
SPARK_SCRIPT_API int spark_gui_consumes_game_pointer(void);
/* --- Math (mirrors Matrix4 helpers) --- */
SPARK_SCRIPT_API void spark_mat4_perspective_vulkan(
        SparkMatrix4* out,
        float verticalFovYRad,
        float aspect,
        float nearZ,
        float farZ);
SPARK_SCRIPT_API void spark_mat4_orthographic_vulkan(
        SparkMatrix4* out,
        float left,
        float right,
        float bottom,
        float top,
        float nearZ,
        float farZ);
SPARK_SCRIPT_API void spark_mat4_mul(SparkMatrix4* out, const SparkMatrix4* a, const SparkMatrix4* b);
SPARK_SCRIPT_API int spark_mat4_try_invert(SparkMatrix4* out, const SparkMatrix4* m);
SPARK_SCRIPT_API void spark_mat4_camera2d_view_projection(
        SparkMatrix4* out,
        float orthoHalfHeight,
        float aspect,
        const SparkVector3* cameraPositionWorld);
SPARK_SCRIPT_API void spark_camera2d_view_projection(
        const SparkCamera2D* camera,
        float framebufferWidth,
        float framebufferHeight,
        SparkMatrix4* out);
SPARK_SCRIPT_API void spark_camera2d_billboard_basis(
        const SparkCamera2D* camera,
        SparkVector3* outRight,
        SparkVector3* outUp);
/* --- GameObject --- */
SPARK_SCRIPT_API uint64_t spark_object_get_id(const SparkGameObject* object);
SPARK_SCRIPT_API int spark_object_get_name(const SparkGameObject* object, char* outUtf8, uint32_t outCapacity);
SPARK_SCRIPT_API void spark_object_set_name(SparkGameObject* object, const char* utf8Name);
SPARK_SCRIPT_API SparkGameComponent* spark_object_try_get_component_by_kind(
        SparkGameObject* object,
        SparkComponentKind kind);
SPARK_SCRIPT_API SparkGameComponent* spark_object_get_or_add_transform(SparkGameObject* object);
/* --- Add components (mirrors GameObject::AddComponent) --- */
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_mesh(
        SparkGameObject* object,
        SparkSceneMeshSlot slot,
        const SparkVector3* albedo);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_material_lit(
        SparkGameObject* object,
        const char* textureKeyOrPath,
        const SparkVector3* tint);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_material_emissive(
        SparkGameObject* object,
        const SparkVector3* emissiveRgb,
        float emissiveIntensity);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_sprite(
        SparkGameObject* object,
        const char* textureKeyOrPath,
        const SparkVector4* tint,
        const SparkVector4* uvRect,
        int sortOrder);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_sprite_animator(SparkGameObject* object);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_sprite_2d_character_anim_fsm(SparkGameObject* object);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_character_3d_anim_fsm(SparkGameObject* object);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_tilemap(
        SparkGameObject* object,
        const char* atlasKeyOrPath,
        uint32_t mapWidth,
        uint32_t mapHeight,
        uint32_t atlasTilesU,
        uint32_t atlasTilesV,
        float tileWorldSize,
        int sortOrderBase);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_point_light(
        SparkGameObject* object,
        const SparkVector3* color,
        float intensity,
        float range);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_spot_light(
        SparkGameObject* object,
        const SparkVector3* color,
        float intensity,
        float range,
        float innerConeDegrees,
        float outerConeDegrees);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_sky(SparkGameObject* object, SparkSceneSkyMode mode);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_text_overlay(SparkGameObject* object);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_gui_canvas(SparkGameObject* object, int sortOrder);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_particle_emitter(SparkGameObject* object);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_box_collider_2d(
        SparkGameObject* object,
        const SparkVector2* halfExtents,
        const SparkVector2* offset);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_circle_collider_2d(
        SparkGameObject* object,
        float radius,
        const SparkVector2* offset);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_rigidbody_2d(
        SparkGameObject* object,
        SparkRigidbodyBodyType2D bodyType,
        float gravityScale);