include/spark/scripting/SparkInteropTypes.h

typedef struct SparkVector2 {
    float x;
    float y;
} SparkVector2;
typedef struct SparkVector3 {
    float x;
    float y;
    float z;
} SparkVector3;
typedef struct SparkVector4 {
    float x;
    float y;
    float z;
    float w;
} SparkVector4;
/** Column-major 4x4 — mirrors Spark::Matrix4. */
typedef struct SparkMatrix4 {
    float m[16];
} SparkMatrix4;
/** Mirrors SceneMeshSlot. */
typedef enum SparkSceneMeshSlot {
    SparkSceneMeshSlot_UnitCube = 0,
    SparkSceneMeshSlot_GroundPlane = 1,
    SparkSceneMeshSlot_Custom = 2,
} SparkSceneMeshSlot;
/** Mirrors SceneSkyMode. */
typedef enum SparkSceneSkyMode {
    SparkSceneSkyMode_None = 0,
    SparkSceneSkyMode_Box = 1,
    SparkSceneSkyMode_Dome = 2,
    SparkSceneSkyMode_Plane = 3,
} SparkSceneSkyMode;
/** Mirrors SceneSpriteSortMode. */
typedef enum SparkSpriteSortMode {
    SparkSpriteSortMode_SortOrderOnly = 0,
    SparkSpriteSortMode_SortOrderThenWorldY = 1,
} SparkSpriteSortMode;
/** Mirrors RigidbodyBodyType2D. */
typedef enum SparkRigidbodyBodyType2D {
    SparkRigidbodyBodyType2D_Kinematic = 0,
    SparkRigidbodyBodyType2D_Static = 1,
    SparkRigidbodyBodyType2D_Dynamic = 2,
} SparkRigidbodyBodyType2D;
/** Mirrors Spark::Camera2D (subset for scripting). */
typedef struct SparkCamera2D {
    SparkVector3 position;
    float rotationRad;
    float halfExtentY;
    float clipNearZ;
    float clipFarZ;
} SparkCamera2D;
/** Result of <c>spark_world_register_platformer2d_demo_textures</c> (Kenney paths under assets/). */
typedef struct SparkPlatformer2DAssetsInfo {
    int usingKenneyTilesheet;
    int usingKenneyPlayerAtlas;
    int usingKenneyGem;
    uint32_t playerAtlasColumns;
} SparkPlatformer2DAssetsInfo;
typedef struct SparkGameObject SparkGameObject;