scripting/bindings/generated/Spark.Bindings/Native.g.cs


        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_world_load_texture(SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_world_register_checkerboard_texture(SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* cacheKey, [NativeTypeName("uint32_t")] uint size, [NativeTypeName("uint32_t")] uint tilePixels, [NativeTypeName("const SparkVector3 *")] SparkVector3* colorA, [NativeTypeName("const SparkVector3 *")] SparkVector3* colorB);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_world_register_platformer2d_demo_textures(SparkGameWorld* world, SparkPlatformer2DAssetsInfo* outInfo);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_world_mount_platformer_ui_font(SparkGameWorld* world);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_platformer2d_kenney_tile_uv([NativeTypeName("uint32_t")] uint tileOneBased, SparkVector4* outUvRect);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_scene_fill_standard_lit_from_world(SparkGameWorld* world, SparkEngineContext* context, [NativeTypeName("const SparkMatrix4 *")] SparkMatrix4* viewProjection, [NativeTypeName("const SparkVector3 *")] SparkVector3* cameraPositionWorld, [NativeTypeName("const SparkVector3 *")] SparkVector3* lightDirectionWorld, [NativeTypeName("const SparkVector3 *")] SparkVector3* lightColor, float lightIntensity, [NativeTypeName("const SparkVector3 *")] SparkVector3* ambientColor, int enableParticles, [NativeTypeName("const SparkVector3 *")] SparkVector3* particleCameraRight, [NativeTypeName("const SparkVector3 *")] SparkVector3* particleCameraUp, float sceneTimeSeconds, void* outParams, [NativeTypeName("uint32_t")] uint outParamsByteSize, SparkSpriteSortMode spriteSortMode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_scene_submit_standard_lit_from_world(SparkGameWorld* world, SparkEngineContext* context, [NativeTypeName("const SparkMatrix4 *")] SparkMatrix4* viewProjection, [NativeTypeName("const SparkVector3 *")] SparkVector3* cameraPositionWorld, [NativeTypeName("const SparkVector3 *")] SparkVector3* lightDirectionWorld, [NativeTypeName("const SparkVector3 *")] SparkVector3* lightColor, float lightIntensity, [NativeTypeName("const SparkVector3 *")] SparkVector3* ambientColor, int enableParticles, [NativeTypeName("const SparkVector3 *")] SparkVector3* particleCameraRight, [NativeTypeName("const SparkVector3 *")] SparkVector3* particleCameraUp, float sceneTimeSeconds, SparkSpriteSortMode spriteSortMode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_gui_process_canvases_input(SparkGameWorld* world, SparkInput* input, int framebufferWidth, int framebufferHeight);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_gui_paint_canvases(SparkGameWorld* world, void* @params, [NativeTypeName("uint32_t")] uint paramsByteSize, int framebufferWidth, int framebufferHeight);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_gui_consumes_game_pointer();

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_mat4_perspective_vulkan(SparkMatrix4* @out, float verticalFovYRad, float aspect, float nearZ, float farZ);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_mat4_orthographic_vulkan(SparkMatrix4* @out, float left, float right, float bottom, float top, float nearZ, float farZ);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_mat4_mul(SparkMatrix4* @out, [NativeTypeName("const SparkMatrix4 *")] SparkMatrix4* a, [NativeTypeName("const SparkMatrix4 *")] SparkMatrix4* b);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_mat4_try_invert(SparkMatrix4* @out, [NativeTypeName("const SparkMatrix4 *")] SparkMatrix4* m);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_mat4_camera2d_view_projection(SparkMatrix4* @out, float orthoHalfHeight, float aspect, [NativeTypeName("const SparkVector3 *")] SparkVector3* cameraPositionWorld);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_camera2d_view_projection([NativeTypeName("const SparkCamera2D *")] SparkCamera2D* camera, float framebufferWidth, float framebufferHeight, SparkMatrix4* @out);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_camera2d_billboard_basis([NativeTypeName("const SparkCamera2D *")] SparkCamera2D* camera, SparkVector3* outRight, SparkVector3* outUp);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint64_t")]
        public static extern ulong spark_object_get_id([NativeTypeName("const SparkGameObject *")] SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_object_get_name([NativeTypeName("const SparkGameObject *")] SparkGameObject* @object, [NativeTypeName("char *")] sbyte* outUtf8, [NativeTypeName("uint32_t")] uint outCapacity);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_object_set_name(SparkGameObject* @object, [NativeTypeName("const char *")] sbyte* utf8Name);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_try_get_component_by_kind(SparkGameObject* @object, SparkComponentKind kind);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_get_or_add_transform(SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_mesh(SparkGameObject* @object, SparkSceneMeshSlot slot, [NativeTypeName("const SparkVector3 *")] SparkVector3* albedo);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_material_lit(SparkGameObject* @object, [NativeTypeName("const char *")] sbyte* textureKeyOrPath, [NativeTypeName("const SparkVector3 *")] SparkVector3* tint);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_material_emissive(SparkGameObject* @object, [NativeTypeName("const SparkVector3 *")] SparkVector3* emissiveRgb, float emissiveIntensity);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_sprite(SparkGameObject* @object, [NativeTypeName("const char *")] sbyte* textureKeyOrPath, [NativeTypeName("const SparkVector4 *")] SparkVector4* tint, [NativeTypeName("const SparkVector4 *")] SparkVector4* uvRect, int sortOrder);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_sprite_animator(SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_sprite_2d_character_anim_fsm(SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_character_3d_anim_fsm(SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_tilemap(SparkGameObject* @object, [NativeTypeName("const char *")] sbyte* atlasKeyOrPath, [NativeTypeName("uint32_t")] uint mapWidth, [NativeTypeName("uint32_t")] uint mapHeight, [NativeTypeName("uint32_t")] uint atlasTilesU, [NativeTypeName("uint32_t")] uint atlasTilesV, float tileWorldSize, int sortOrderBase);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_point_light(SparkGameObject* @object, [NativeTypeName("const SparkVector3 *")] SparkVector3* color, float intensity, float range);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_spot_light(SparkGameObject* @object, [NativeTypeName("const SparkVector3 *")] SparkVector3* color, float intensity, float range, float innerConeDegrees, float outerConeDegrees);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_sky(SparkGameObject* @object, SparkSceneSkyMode mode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_text_overlay(SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_gui_canvas(SparkGameObject* @object, int sortOrder);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_particle_emitter(SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_box_collider_2d(SparkGameObject* @object, [NativeTypeName("const SparkVector2 *")] SparkVector2* halfExtents, [NativeTypeName("const SparkVector2 *")] SparkVector2* offset);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_circle_collider_2d(SparkGameObject* @object, float radius, [NativeTypeName("const SparkVector2 *")] SparkVector2* offset);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_rigidbody_2d(SparkGameObject* @object, SparkRigidbodyBodyType2D bodyType, float gravityScale);
